# NumberWrangler

./: README.md  pyproject.toml  setup.cfg
ExampleCode/: VariateExample
NumberWrangler/: Wrangle.py
