[metadata]
name = NumberWrangler
version = 0.0.1
author = Abhay Shukla
author_email = notsure@gmail.com
description = Python package for slightly or massively variating numbers.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/aboombadev/NumberWrangler
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: G3PLv3 License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True
